# sber-agent-hackathon

./: .env.example  .gitignore  API_ya_zdes_zhivu.py  LICENSE  README.md  Taskfile.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  ruff.toml  run_test.ps1  run_tests_uv.ps1  sber.ipynb  test.py  test_agents.ipynb  test_metro.py  test_rag_pipeline.ipynb  test_tool_usage.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
__marimo__/session/: test.py.json
agent_sdk/: __init__.py  backend_react.py  config.py  langgraph_client.py  langgraph_functions.py  langgraph_functions_ui.py
app/: API_ya_zdes_zhivu.py  config.py  graphs.py  logging_config.py
app/agent/: __init__.py  city_agent.py  hybrid.py  hybrid_keywords.py  hybrid_matvey.py  intent_classifier.py  llm.py  memory.py  persistent_memory.py  resilience.py  state.py  supervisor.py  supervisor_matvey.py  tool_dispatcher.py  unified.py  utils.py
app/api/: yandex_geo.py  yazz.py  yazzh_new.py
app/rag/: __init__.py  config.py  enhancers.py  graph.py  indexer.py  inspect_parsed.py  inspect_services.py  knowledge_base.json  life_situations.json  models.py  pipeline.py  retriever.py  scrapy.cfg  service.ipynb  utils.py  worker.py
app/rag/gu_parser/: __init__.py  how_to_use.txt  items.py  middlewares.py  pipelines.py
app/rag/gu_parser/spiders/: knowledge_base_spider.py  life_situations_spider.py
app/rag/parsers/: __init__.py  base.py  life_situations.py  service_pages.py
app/services/: __init__.py  toxicity.py  toxicity_advanced.ipynb  toxicity_advanced.py
app/storage/: __init__.py  user_data.py
app/tools/: __init__.py  city_tools.py  city_tools_matvey.py  city_tools_v2.py  few_shot_examples.py  rag_tools.py
app/ui/: __init__.py  auth_config.yaml  streamlit_app.py  styles.css
app/ui_react/: package-lock.json  package.json
app/ui_react/public/: index.html
app/ui_react/src/: App.js  index.css  index.js
app/ui_react/src/elements/: storage.jsx
app/ui_react/src/hook/: useLocalChat.jsx
bots/max/: bot_main.py  config.py
bots/tg/: bot_main.py
data/: .gitignore
data/parsed_docs/inspection/: INDEX.md  life_situation_190057.md  life_situation_190087.md  life_situation_190097.md  life_situation_740477.md  summary.json
data/parsed_docs/services_inspection/: INDEX.md  service_187841.md  service_188861.md  service_188907.md  summary.json
docker/: bot-max.Dockerfile  bot-telegram.Dockerfile  langgraph.Dockerfile  streamlit.Dockerfile
libs/langgraph-client/: .env.example  pyproject.toml
libs/langgraph-client/tests/: __init__.py
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py
max_bot/: echo.py  langgraph_func.py
notebooks/: API_test.ipynb  api_geocoding_candidates_test.ipynb  api_geocoding_metro_test.ipynb  old_osm_functions.py  routes.ipynb  sber.ipynb  spb_metro_dadata.json  spb_metro_dadata_with_address.json  test_API_yazzh.ipynb  test_agents.ipynb  test_toxicity.ipynb
notebooks/yazzh_json/: get_district_info_by_building_1.json
prompts/: __init__.py  city_agent_prompt.txt  conversation.txt  entity_extraction.jinja2  hybrid_intent_classifier.txt  intent_classifier.txt  intent_only.txt  tool_agent_system.txt
prompts/rag/: document_grade.txt  query_rewrite.txt
routes_api/: .gitignore  README.md  app.py  otp_client.py  route_geojson.py
routes_api/otp-playground/: build.ps1
routes_api/otp-playground/data/: build-config.json  download_data.ps1  router-config.json
scripts/: quick_test.py  test_tools.py
tests/: test_api_client.py  test_case_for_RAG.md  test_memory.py  test_persistence.py  test_tier1_api.py  test_tier1_pytest.py  test_tier2_api.py  test_toxicity.py  test_yazz_v2.py  test_yazzh_new.py  test_yazzh_rich.py
