[project]
name = "llm-city-assistant"
version = "0.1.0"
description = "Интеллектуальный агент «Городской помощник» для Санкт-Петербурга"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "gigachat>=0.1.43",
    "httpx>=0.28.1",
    "langchain>=1.1.0",
    "langchain-gigachat>=0.3.13a1",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]
