[project]
name = "langgraph-client"
version = "0.1.0"
description = "Клиент для взаимодействия с LangGraph API сервером"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langgraph-sdk>=0.2.10",
    "pydantic>=2.0,<2.12",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_client"]
