[project]
name = "shared"
version = "0.1.0"
description = "Общие утилиты и конфигурация"
requires-python = ">=3.12"
dependencies = [
    "pydantic<=2.11.10",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
